--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,6 +20,7 @@
 body {
  font-family: 'Noto Sans', sans-serif;
  color: var(--color-primary);
+ line-height: 1.2;
 }
 
 a {
@@ -30,4 +31,22 @@ a {
 button {
  border: none;
  background: none;
+}
+
+a,
+button {
+ transition: opacity 0.2s;
+ cursor: pointer;
+}
+
+a:hover,
+button:hover {
+ opacity: 0.7;
+}
+
+.globalContainer {
+ display: flex;
+ max-width: 1366px;
+ width: 100%;
+ margin: 0 auto;
 }
