--- a/components/ProductCard/productCard.module.scss
+++ b/components/ProductCard/productCard.module.scss
@@ -7,7 +7,7 @@
  width: 224px;
  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.1);
 
- .flexContainer {
+ .topContainer {
   padding: $spacing;
   display: flex;
   flex-direction: column;
@@ -18,12 +18,6 @@
   text-align: center;
   font-size: 16px;
   font-weight: 600;
- }
-
- .imgContainer {
-  position: relative;
-  width: 192px;
-  height: 144px;
  }
 
  .description {
@@ -38,10 +32,63 @@
  }
 
  .button {
-  width: 100%;
+  width: 224px;
   height: 40px;
   text-transform: uppercase;
   color: var(--color-white);
   background-color: var(--color-secondary);
+ }
+}
+
+// Modifiers
+.large {
+ $spacing: 24px;
+
+ position: relative;
+ max-width: 688px;
+ width: 100%;
+ border-radius: 5px;
+ .topContainer {
+  padding: $spacing;
+  gap: $spacing;
+ }
+
+ a {
+  pointer-events: none;
+ }
+
+ .name {
+  font-size: 24px;
+ }
+
+ .description {
+  font-size: 18px;
+ }
+
+ .imgContainer {
+  position: relative;
+ }
+
+ .img {
+  position: relative !important;
+ }
+
+ .bottomContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px 24px 24px;
+  align-items: center;
+ }
+
+ .price {
+  margin-bottom: $spacing;
+  font-size: 20px;
+ }
+
+ .button {
+  font-weight: 600;
+  border-radius: 5px;
+  max-width: 224px;
+  width: 100%;
  }
 }
