--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,7 @@ body {
 }
 
 a {
+ display: flex;
  color: inherit;
  text-decoration: none;
 }
@@ -39,6 +40,11 @@ button {
  cursor: pointer;
 }
 
+a:focus-visible,
+button:focus-visible {
+ outline: 2px dashed var(--color-secondary);
+}
+
 a:hover,
 button:hover {
  opacity: 0.7;
@@ -49,21 +55,4 @@ button:hover {
  max-width: 1366px;
  width: 100%;
  margin: 0 auto;
-}
-
-.homePageContainer {
- flex-wrap: wrap;
- justify-content: space-evenly;
- gap: 32px;
-}
-
-.productPageContainer {
- justify-content: center;
-}
-
-.notFoundPageContainer {
- flex-direction: column;
- align-items: center;
- justify-content: center;
- gap: 20px;
 }
