--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -7,6 +7,6 @@
   display: flex;
   flex-grow: 1;
   margin-top: var(--navigation-height);
-  padding: var(--layout-padding);
+  padding: 32px var(--layout-padding);
  }
 }
