--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,7 +41,8 @@ button {
 }
 
 a:focus-visible,
-button:focus-visible {
+button:focus-visible,
+input:focus-visible {
  outline: 2px dashed var(--color-secondary);
 }
 
