--- a/components/ProductCard/productCard.module.scss
+++ b/components/ProductCard/productCard.module.scss
@@ -4,6 +4,7 @@
  display: flex;
  flex-direction: column;
  justify-content: space-between;
+ max-height: 450px;
  width: 224px;
  box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.1);
 
@@ -45,6 +46,7 @@
  $spacing: 24px;
 
  position: relative;
+ max-height: none;
  max-width: 688px;
  width: 100%;
  border-radius: 5px;
