--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
  --color-secondary: #25b8f9;
  --color-success: #41c857;
  --color-error: #ff380a;
+ --color-outline: #52e6db;
 
  --navigation-height: 80px;
  --layout-padding: 32px;
